[package]
name = "hw7_EthanBrown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hw7_EthanBrown"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
numpy = "0.22"
rayon = "1.10"
ndarray-parallel = "0.9.1"
ndarray = { version = "0.16", features = ["rayon"] }

[profile.release]
opt-level = 3
